Update 'eytb65epc-python' component image to: quay.io/rhtap_qe/rhtap-qe:a6503f8cb6a1313ed14a36869a405abce071343b@sha256:81a11d4b9e4cc8359eb7a5af36a8cc8f161799b91cd646fc6d2ac95524640049

--- a/components/eytb65epc-python/overlays/development/deployment-patch.yaml
+++ b/components/eytb65epc-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: eytb65epc-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:a6503f8cb6a1313ed14a36869a405abce071343b@sha256:81a11d4b9e4cc8359eb7a5af36a8cc8f161799b91cd646fc6d2ac95524640049
+          name: container-image
